@@ -1,5 +1,5 @@
 #pragma once
 
-extern void* EndExperimentInit(void* p_menuHandle, RaceEndType p_saveWayVersion);
+extern void* EndExperimentInit(RaceEndType p_saveWayVersion);
 
 #define OK 1
